<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="#F2064004">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/todo_dialog_add_task"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbTeocratico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_option_teoc"
            android:textSize="22sp"
            android:checked="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:buttonTint="@color/fluor_yelow"/>

        <RadioButton
            android:id="@+id/rbAplicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:buttonTint="@color/fluor_green"
            android:text="@string/todo_option_app"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rbOtros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/todo_option_other"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:buttonTint="@color/blue_stone"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/todo_botton_crete"/>

</LinearLayout>