<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_medium"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:text="@string/todo_title"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_categories"
        android:textAllCaps="true"
        android:textColor="@color/teal_700"
        android:layout_marginHorizontal="32dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_tasks"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        android:textColor="@color/teal_700"
        android:layout_marginHorizontal="32dp"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"/>
    


    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:tint="@color/white"
        app:backgroundTint="@color/black"
        app:fabSize="normal"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="end|bottom"
        />
</FrameLayout>